@@ -1,4 +1,4 @@
-try:
+try: # pragma: no cover
     from pkgutil import walk_packages
-except ImportError:
+except ImportError: # pragma: no cover
     from pkgutil_26 import walk_packages
