@@ -1,4 +1,5 @@
 import unittest
+import sys
 
 class TestScanner(unittest.TestCase):
     def _makeOne(self, **kw):
@@ -7,11 +8,6 @@ class TestScanner(unittest.TestCase):
 
     def test_package(self):
         from venusian.tests.fixtures import one
-        class Test(object):
-            def __init__(self):
-                self.registrations = []
-            def __call__(self, **kw):
-                self.registrations.append(kw)
         test = Test()
         scanner = self._makeOne(test=test)
         scanner.scan(one)
@@ -56,11 +52,6 @@ class TestScanner(unittest.TestCase):
         # has no corresponding .py source file.  Such orphaned .pyc
         # files should be ignored during scanning.
         from venusian.tests.fixtures import pyc
-        class Test(object):
-            def __init__(self):
-                self.registrations = []
-            def __call__(self, **kw):
-                self.registrations.append(kw)
         test = Test()
         scanner = self._makeOne(test=test) 
         scanner.scan(pyc)
@@ -92,11 +83,6 @@ class TestScanner(unittest.TestCase):
 
     def test_module(self):
         from venusian.tests.fixtures.one import module
-        class Test(object):
-            def __init__(self):
-                self.registrations = []
-            def __call__(self, **kw):
-                self.registrations.append(kw)
         test = Test()
         scanner = self._makeOne(test=test)
         scanner.scan(module)
@@ -123,11 +109,6 @@ class TestScanner(unittest.TestCase):
 
     def test_one_category(self):
         from venusian.tests.fixtures import category
-        class Test(object):
-            def __init__(self):
-                self.registrations = []
-            def __call__(self, **kw):
-                self.registrations.append(kw)
         test = Test()
         scanner = self._makeOne(test=test)
         scanner.scan(category, categories=('mycategory',))
@@ -138,11 +119,6 @@ class TestScanner(unittest.TestCase):
 
     def test_all_categories_implicit(self):
         from venusian.tests.fixtures import category
-        class Test(object):
-            def __init__(self):
-                self.registrations = []
-            def __call__(self, **kw):
-                self.registrations.append(kw)
         test = Test()
         scanner = self._makeOne(test=test)
         scanner.scan(category)
@@ -156,11 +132,6 @@ class TestScanner(unittest.TestCase):
 
     def test_all_categories_explicit(self):
         from venusian.tests.fixtures import category
-        class Test(object):
-            def __init__(self):
-                self.registrations = []
-            def __call__(self, **kw):
-                self.registrations.append(kw)
         test = Test()
         scanner = self._makeOne(test=test)
         scanner.scan(category, categories=('mycategory', 'mycategory2'))
@@ -171,3 +142,30 @@ class TestScanner(unittest.TestCase):
         self.assertEqual(test.registrations[1]['name'], 'function2')
         self.assertEqual(test.registrations[1]['ob'], category.function2)
         self.assertEqual(test.registrations[1]['function'], True)
+
+    if sys.version_info >= (2, 6):
+
+        def test_classdecorator(self):
+            from venusian.tests.fixtures import classdecorator
+            test = Test()
+            scanner = self._makeOne(test=test)
+            scanner.scan(classdecorator)
+            test.registrations.sort(
+                lambda x, y: cmp((x['name'], x['ob'].__module__),
+                                 (y['name'], y['ob'].__module__))
+                )
+            self.assertEqual(len(test.registrations), 2)
+            self.assertEqual(test.registrations[0]['name'], 'SubClass')
+            self.assertEqual(test.registrations[0]['ob'],
+                             classdecorator.SubClass)
+            self.assertEqual(test.registrations[0]['subclass'], True)
+            self.assertEqual(test.registrations[1]['name'], 'SuperClass')
+            self.assertEqual(test.registrations[1]['ob'],
+                             classdecorator.SuperClass)
+            self.assertEqual(test.registrations[1]['superclass'], True)
+
+class Test(object):
+    def __init__(self):
+        self.registrations = []
+    def __call__(self, **kw):
+        self.registrations.append(kw)
