@@ -4,6 +4,13 @@ Change Log
 Next release
 ------------
 
+- Bug fix: when a venusian decorator used as a class decorator was
+  used against both a class *and* a subclass of that class, the
+  superclass and subclass would effectively share the same set of
+  callbacks.  This was not the intent: each class declaration should
+  have its own local set of callbacks; callbacks added via decorations
+  should not be inherited.
+
 - Arrange test fixtures into a single directory.
 
 0.3 (2010-06-24)
